# Spikeometric

./: .gitignore  .readthedocs.yml  CITATION.cff  README.md  benchmark  cpu_environment.yml  di.py  environment.yml  generator.py  gpu_environment.yml  gpu_environmet.yml  makefile  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_simula  todo.md  tune
.github/workflows/: draft-pdf.yml  test-package-conda.yml
Examples/: load_model.ipynb  perturb_10_neurons.py  perturb_10_neurons_multi_instance.py  simulate_100_neurons.ipynb  simulate_10_neurons.py  simulate_20_neurons.ipynb  simulate_with_stimulus.ipynb  stimulate_100_neurons.ipynb  tune_model.ipynb
benchmarking/: __main__.py  parallelization.py  timing.py
benchmarking/benchmark_data/: cpu_timing.npz  gpu_timing.npz  new_sim_comp.npz
data/20_neurons_1_datasets_1000_steps/: 0.npz
data/22_neurons_1_datasets_1000_steps/: 0.npz
data/herman_22_neurons_1_sims_1000_steps/: 0.npz
data/saved_models/: glorot_20_neurons_0.1_firing_rate.pt
docs/: conf.py  index.rst  requirements.txt
docs/benchmarks/: benchmarks.rst
docs/introduction/: introduction.rst
docs/modules/: datasets.rst  models.rst  stimulation.rst  stimulus.rst
docs/tutorials/: advanced_example.rst  create_dataset.rst  create_model.rst  create_stimulus.rst  implement_model.rst  stimuli.rst  tune_model.rst
examples/: basic_example.ipynb  implement_new_model.ipynb  large_scale_example.ipynb  simulate_with_stimulus.ipynb  tune_model.ipynb  working_with_stimulus.ipynb
graph_sim/: __main__.py  graph_viz.py  make_dataset.py  visualize_sim.py
graph_sim/benchmarking/: neuron_dependence.py
graph_sim/connectivity/: __init__.py  connectivity_filter_generator.py  params.py
graph_sim/model/: graph_glm.py
graph_sim/models/: __init__.py  glm.py  glm_numpy.py  sparse_glm.py
graph_sim/networks/: __init__.py  filter_params.py  network_builder.py  numpy_network.py  sparse_network.py  torch_network.py
graph_sim/plotting/: plot_timings.py  visualize_sim.py
graph_sim/simulator/: __init__.py  numpy_simulator.py  simulate.py  simulator.py  sparse_simulator.py  torch_simulator.py
graph_sim/timing/: n_capabilities.npz  neuron_dependence.py  para_dependence.py  plot_timings.py
graph_sim/w0/: normal.py
plotting/: __init__.py  plot.py  visualize_sim.py
simulation/: __main__.py  simulate.py  simulate_herman.py
spikeometric/datasets/: __init__.py  connectivity_dataset.py  connectivity_generator.py  mexican_hat_connectivity_generator.py  (+3 more)
spiking_network/: __main__.py  example.py  make_dataset.py  save_data.py  tune.py  utils.py  w0_generator.py
tests/: __init__.py  conftest.py  test_datasets.py  test_device.py  test_models.py  test_simulation.py  test_stimulation.py  test_tuning.py
tuning/: __main__.py  tune.py
(+341 files in other folders)
