[tool.poetry]
name = "spikeometric"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spikeometric"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
tqdm = "^4.62.3"
scipy = "^1.7.3"
seaborn = "^0.11.2"
ipython = "^8.8.0"
networkx = "^3.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-lazy-fixture = "^0.6.3"
sphinx = "^4.3.2"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
