[tool.poetry]
name = "spikeometric"
version = "1.0.3"
description = "Spikeometric is a Pytorch Geometric based framework for simulating Spiking Neural Networks using Linear Non-linear Cascade models"
authors = ["Jakob Sønstebø <jakobls16@gmail.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"
documentation = "https://spikeometric.readthedocs.io/en/latest/"
repository = "https://github.com/bioAI-Oslo/Spikeometric"
packages = [{include = "spikeometric"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "<1.24"
matplotlib = "^3.7.1"
tqdm = "^4.62.3"
scipy = "^1.7.3"
seaborn = "^0.12.2"
networkx = "^3.0"
pyparsing = "^3.1.1"
pillow = "9.4.0"
kiwisolver = "1.4.4"
pytz = "2023.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-lazy-fixture = "^0.6.3"
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.1.1"
jupyter = "^1.0.0"
ipython = "^7.34.0"
ipykernel = "^5.5.6"
pandas = "^1.5.3"
notebook = "^6.5.5"
tornado = "6.3.2"
decorator = "<5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
